<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/atmos">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/toolbar"
        android:background="@color/purple_200"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="24sp"
            android:ellipsize="end"
            android:maxLength="25"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pressureCV"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitleAirPressure"
                    android:text="@string/air_pressure"
                    android:textColor="@color/black"/>


                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/airPressure"
                    android:layout_below="@id/tvTitleAirPressure"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvMillibars" android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/airPressure"
                    android:layout_below="@id/tvTitleAirPressure"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/temperatureCV"
            android:layout_below="@id/pressureCV"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitleAirTemperature"
                    android:text="@string/air_temperature"
                    android:textColor="@color/black"/>


                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/airTemperature"
                    android:layout_below="@id/tvTitleAirTemperature"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTemperature"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/airTemperature"
                    android:layout_below="@id/tvTitleAirTemperature"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/magneticCV"
            android:layout_below="@id/temperatureCV"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitleMagenticField"
                    android:text="@string/magnetic_field_strength"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/magField"
                    android:layout_below="@id/tvTitleMagenticField"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvMagField"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/magField"
                    android:layout_below="@id/tvTitleMagenticField"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gravityCV"
            android:layout_below="@id/magneticCV"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitleGravityField"
                    android:text="@string/gravitational_field_strength"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/gravField"
                    android:layout_below="@id/tvTitleGravityField"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvGravField"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/gravField"
                    android:layout_below="@id/tvTitleGravityField"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/humidityCV"
            android:layout_below="@id/gravityCV"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitleHumidty"
                    android:text="@string/humidity"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/humidity"
                    android:layout_below="@id/tvTitleHumidty"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHumidity"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/humidity"
                    android:layout_below="@id/tvTitleHumidty"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>